--- a/.github/workflows/build-win-arm64-test.yml
+++ b/.github/workflows/build-win-arm64-test.yml
@@ -29,24 +29,28 @@ jobs:
         with:
           arch: amd64_arm64  # Sets up cross-compilation from x64 to ARM64
 
-      - name: Install vcpkg
+      - name: Add arguments required for openssl on arm
         run: |
-          git clone https://github.com/microsoft/vcpkg.git C:\vcpkg
-          cd C:\vcpkg
-          .\bootstrap-vcpkg.bat
-        shell: cmd
+          echo set(VCPKG_C_FLAGS "-DNO_INTERLOCKEDOR64") >> %VCPKG_INSTALLATION_ROOT%\triplets\community\arm64-windows-static.cmake
+        shell: cmd # Powershell by default will output utf16 and break the file
 
       - name: Install OpenSSL (Static) for Windows ARM64
         run: |
-          C:\vcpkg\vcpkg install openssl:arm64-windows-static
+          %VCPKG_INSTALLATION_ROOT%\vcpkg install openssl:arm64-windows-static
         shell: cmd
 
       - name: Build
         run: |
           npm install --ignore-scripts
-          node_modules/.bin/prebuild -r napi --backend cmake-js --arch arm64 --upload -u ${{ secrets.GITHUB_TOKEN }} -- --CDCMAKE_TOOLCHAIN_FILE=c:\vcpkg\scripts\buildsystems\vcpkg.cmake --CDVCPKG_TARGET_TRIPLET=arm64-windows-static
+          node_modules/.bin/prebuild -r napi --backend cmake-js --arch arm64 --upload -u ${{ secrets.GITHUB_TOKEN }} -- --CDCMAKE_TOOLCHAIN_FILE=%VCPKG_INSTALLATION_ROOT%\scripts\buildsystems\vcpkg.cmake --CDVCPKG_TARGET_TRIPLET=arm64-windows-static
 
-      - name: Upload
-        run: node_modules/.bin/prebuild -r napi --upload -u ${{ secrets.GITHUB_TOKEN }}
-        env:
-          CI: true
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: win-arm64
+          path: build/Release/*
+
+      # - name: Upload
+      #   run: node_modules/.bin/prebuild -r napi --upload -u ${{ secrets.GITHUB_TOKEN }}
+      #   env:
+      #     CI: true
