--- a/.github/workflows/build-win-arm64-test.yml
+++ b/.github/workflows/build-win-arm64-test.yml
@@ -31,8 +31,8 @@ jobs:
 
       - name: Add arguments required for openssl on arm
         run: |
-          echo set(VCPKG_C_FLAGS "-DNO_INTERLOCKEDOR64") >> %VCPKG_INSTALLATION_ROOT%\triplets\community\arm64-windows-static.cmake
-        shell: cmd # Powershell by default will output utf16 and break the file
+          echo "set(VCPKG_C_FLAGS `"-DNO_INTERLOCKEDOR64`")`nset(VCPKG_CXX_FLAGS `"-DNO_INTERLOCKEDOR64`")" | out-file .\arm64-windows-static-openssl.cmake -append -Encoding utf8
+        shell: pwsh
 
       - name: Install OpenSSL (Static) for Windows ARM64
         run: |
